plugins {
    id "architectury-plugin" version "3.4-SNAPSHOT"
    id "dev.architectury.loom" version "1.6-SNAPSHOT" apply false
    id "io.github.p03w.machete" version "2.0.1"
    id "me.shedaniel.unified-publishing" version "0.1.+"
}

architectury {
    minecraft = rootProject.minecraft_version
}

subprojects {
    apply plugin: "dev.architectury.loom"
    apply plugin: 'io.github.p03w.machete'
    apply plugin: "me.shedaniel.unified-publishing"

    loom {
        silentMojangMappingsLicense()
    }

    repositories {
        maven {
            name = "Jitpack"
            url "https://jitpack.io"
        }
        maven {
            name = "Geckolib Maven"
            url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
        }
        maven {
            name = "Curse Maven"
            url "https://www.cursemaven.com"
            content {
                includeGroup "curse.maven"
            }
        }
    }

    dependencies {
        minecraft "com.mojang:minecraft:${minecraft_version}"
        mappings loom.layered {
            it.mappings("net.fabricmc:yarn:${yarn_mappings}:v2")
            it.mappings("dev.architectury:yarn-mappings-patch-neoforge:${neo_yarn_patch}")
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
        options.release = 21
    }

    machete {
        json.enabled = false
    }
}

allprojects {
    apply plugin: "java"
    apply plugin: 'java-library'
    apply plugin: 'signing'
    apply plugin: 'idea'
    apply plugin: "architectury-plugin"
    apply plugin: "maven-publish"

    base {
        archivesName = rootProject.archives_base_name
    }

    version = rootProject.mod_version
    group = rootProject.maven_group

    repositories {
    }

    tasks.withType(JavaCompile) {
        options.encoding = "UTF-8"
        options.release = 21
    }

    java {
        withSourcesJar()
    }
}